# MiniAgents

./: .env.template  .gitignore  .pylintrc  LICENSE  README.md  README__claude-3-5-sonnet-20240620.md  README__claude-3-haiku-20240307.md  README__claude-3-opus-20240229.md  README__gpt-4o-2024-05-13.md  pyproject.toml
examples/: claude.py  conversation.py  fix_my_sentence.py  full_duplex.py  llm_example.py  md_chat_history.py  sequence_flattening.py  sequence_flattening_claude.py  sequence_flattening_naive_alternative.py  versatilis.py
examples/DELETEME/: md_chat_history.py  md_chat_history2.py  sample.md
examples/llama_index/in_progress/: llama_chat.py  llama_ingest.py
examples/self_dev/: docu_agents.py  explainer_agent.py  readme_agent.py  self_dev_common.py  self_dev_llama_index.py  self_dev_prompts.py
examples/self_dev/llama_index/: naive_ingestion.py
examples/self_dev/output/: ALT_RESP__claude-3-opus-20240229.md  ALT_RESP__gpt-4o-2024-05-13.md  ALT__EXPLAINER_AGENT__gpt-4o-2024-05-13.md  CHAT__EXPLAINER_AGENT.md  CHAT__README_AGENT.md  README-claude-3-opus-20240229.md  README-gpt-4o-2024-05-13.md  README-no-comments-at-all-no-tests-claude-3-opus-20240229.md  README-second-no-examples-no-tests-gpt-4o-2024-05-13.md  README_BACKUP.md  README__DEFAULT__complete__claude-3-5-sonnet-20240620.md  README__DEFAULT__complete__claude-3-haiku-20240307.md  README__DEFAULT__complete__claude-3-opus-20240229.md  README__DEFAULT__complete__gpt-4o-2024-05-13.md  README__DEFAULT__no_pypr__claude-3-5-sonnet-20240620.md  README__DEFAULT__no_pypr_no_readme__claude-3-5-sonnet-20240620.md  README__DEFAULT__no_pypr_no_readme_no_examples__claude-3-5-sonnet-20240620.md  README__DEFAULT__no_pypr_no_readme_no_examples_no_tests__claude-3-5-sonnet-20240620.md  README__adialog-loop-no-pyproject__complete__claude-3-opus-20240229.md  README__adialog-loop-no-pyproject__complete__gpt-4o-2024-05-13.md  README__adialog-loop-no-pyproject__no_examples__claude-3-opus-20240229.md  README__adialog-loop-no-pyproject__no_examples__gpt-4o-2024-05-13.md  README__adialog-loop-no-pyproject__no_examples_no_tests__claude-3-opus-20240229.md  README__adialog-loop-no-pyproject__no_examples_no_tests__gpt-4o-2024-05-13.md  README__adialog-loop-no-pyproject__no_tests__claude-3-opus-20240229.md  README__adialog-loop-no-pyproject__no_tests__gpt-4o-2024-05-13.md  README__better-conv-example__complete__claude-3-opus-20240229.md  README__better-conv-example__complete__gpt-4o-2024-05-13.md  README__better-conv-example__no_examples__claude-3-opus-20240229.md  README__better-conv-example__no_examples__gpt-4o-2024-05-13.md  README__better-conv-example__no_examples_no_tests__claude-3-opus-20240229.md  README__better-conv-example__no_examples_no_tests__gpt-4o-2024-05-13.md  README__better-conv-example__no_tests__claude-3-opus-20240229.md  (+37 more)
examples/self_developer/: self_dev_common.py  self_dev_prompts.py
examples/web_research_tutorial/: .env.tempate  README.md  TUTORIAL-claude.md  TUTORIAL-gemini.md  TUTORIAL-obsolete.md  TUTORIAL.md  WEB_RESEARCH_TUTORIAL.md  requirements.txt  sequence_flattening.py  utils.py  web_research.py
miniagents/: __init__.py  chat_history.py  messages.py  miniagent_typing.py  miniagents.py  utils.py
miniagents/ext/: __init__.py  agent_aggregators.py  chat_history_md.py  console_user_agent.py  history_agents.py  misc_agents.py  user_agents.py
miniagents/ext/llm/: openai.py  (+3 more)
miniagents/promisegraph/: errors.py  node.py  promise.py  sentinels.py  sequence.py  typing.py
miniagents/promising/: errors.py  node.py  promise.py  promise_typing.py  promising.py  sentinels.py  sequence.py  typing.py
promisegraph/: core.py  miniagents.py  node.py  promise.py  sentinels.py
promisegraph/miniagents/: miniagents.py
tests/: test_agents.py  test_frozen.py  test_llm.py  test_llm_integrations.py  test_message.py  test_message_sequence.py  test_miniagents.py  test_node.py  test_node_based_models.py  test_promise.py  test_sequence.py  test_streamed_promise.py
(+74 files in other folders)
